# foldedtensor

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  changelog.md  coverage.txt  pyproject.toml  ruff.toml  setup.py
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: coverage.yml  generate_badge.py  release.yml  test-build.yml  tests.yml
docs/: benchmark.md
foldedtensor/: __init__.py  functions.cpp  version.py
scripts/: benchmark.py
tests/: conftest.py  test_folded_tensor.py  test_indices.py  test_multiprocessing.py
